--- a/todayILearnedReact.html
+++ b/todayILearnedReact.html
@@ -97,6 +97,93 @@ function ToDoList(){
     </div>
     )
 }</p>
+    <hr/>
+<p>  React-router-dom
+
+React-router 시작하기
+
+Npm i react-router-dom
+
+App.js
+Import {HashRouter,Route}from “react-router-dom”;
+
+Function App(){
+	return
+ <HashRouter>
+	<Route path=“home/” component={Home}/>
+	<Route path=“/about” component={About}/>
+	//path와 component는 이름이 같을 필요는 없다.
+</HashRouter>
+}
+
+//case1:
+Function App(){
+	return
+ <HashRouter>
+	<Route path=“home/”>
+		<h1>Home</h1>
+	</Route>
+	<Route path=“home/intro”><h1>HomeIntro</h1></Route>
+	//home/intro 접속시 home과 homeintro 두 개 다 렌더링됨
+	<Route path=“/about”><h1>About</h1><Route/>
+</HashRouter>
+}
+Solution of the case 1:
+<Route path =“/” exact={true} component={Home}>
+//정확하게 path가 일치하는 것만 렌더
+*버전업후에 HashRouter -> BrowserRouter, component->element
+Route를 Routes로 감싸줘야함
+
+페이지 이동을 위한 Navigation
+
+Navigation.js
+
+Import {Link} from “react-router-dom”;
+Function Navigation(){
+	Return(
+		<div>
+			<Link to=“/“>Home</Link>
+			<Link to=“/about”>About</Link>
+		</div>	
+	)
+}
+
+App.js
+…
+Import Navigation from “~~~”;
+
+Function App(){
+	return
+ <HashRouter>
+<Navigation/> // Link는 반드시 Routes안에 있어야 작동됨
+	<Route path=“home/”>
+		<h1>Home</h1>
+	</Route>
+	<Route path=“home/intro”><h1>HomeIntro</h1></Route>
+	<Route path=“/about”><h1>About</h1><Route/>
+</HashRouter>
+}
+
+Routes 간에 props공유
+
+Function App(){
+	return
+ <HashRouter>
+	<Route path=“home/”>
+		<h1>Home</h1>
+	</Route>
+	<Route path=“home/intro”><h1>HomeIntro</h1></Route>
+	<Route path={
+				{
+					pathname:”/about”,
+					state:{fromNavigation:true
+						}
+				}
+		}><h1>About</h1><Route/>
+</HashRouter>
+}
+   </p>
+   <hr/>
 </body>
 
 </html>
