--- a/todayILearnedReact.html
+++ b/todayILearnedReact.html
@@ -207,6 +207,30 @@ Function App(){
 	</p>
 	<h3>예시는 웹 테마를 바꾸기를 위한props </h3>
 	</p>
+	 <h1>enum</h1>
+	 <p>
+	 enum<br/>
+
+enum categories{<br/>
+	"TO_DO",<br/>
+	"DOING",<br/>
+	"DONE,	<br/>
+}<br/>
+enum을 쓰면 enum 안에 있는 값을 불러 올 수 있다. 단순 타이핑으로 했을때 
+오타등으로 생기는 문제를 줄일수도있다.
+
+enum이름.enum안에 있는 요소 이런 형태로 불러 올수 있다<br/>
+enum은 따로 설정하지않으면 값은 숫자값으로 저장된다.
+<br/>
+enum categories{<br/>
+	"TO_DO":"TO_DO",<br/>
+	"DOING":"DOING",<br/>
+	"DONE":"DONE",	<br/>
+}
+이런식으로 값을 정해주면 정해진 값으로 저장된다<br/>
+	 </p>
+	 
+	 
 </body>
 
 </html>
