--- a/todayILearnedReact.html
+++ b/todayILearnedReact.html
@@ -263,6 +263,14 @@ enum categories{<br/>
 	
 
 	 </p><br/>
+	<h1>React Memo</h1>
+	<p>
+	react memo<br/>
+prop이 바뀌지않는 다면 컴포넌트를 렌더링 하지않게 해줌
+불필요한 리렌더링을 줄이고 최적화에 적합<br/>
+
+export default name of component --> export default React.memo(name of component)<br/>
+	</p><br/>
 </body>
 
 </html>
