--- a/todayILearnedReact.html
+++ b/todayILearnedReact.html
@@ -271,6 +271,8 @@ prop이 바뀌지않는 다면 컴포넌트를 렌더링 하지않게 해줌
 
 export default name of component --> export default React.memo(name of component)<br/>
 	</p><br/>
+	<h1>Ref</h1>
+	<p>react hooks 중에 하나로 html요소를 javascript로 가져와서 쓸 수 있다</p>
 </body>
 
 </html>
