--- a/todayILearndeEtc.html
+++ b/todayILearndeEtc.html
@@ -3,6 +3,20 @@
   <head>
   <meta charset="UTF-8">
     <title>수영의 TIL Etc</title>
+    
+    <h1>라이브러리와 프레임워크</h1>
+    <hr/>
+    <p>
+      라이브러리: 개발자가 필요한 도구들을 모아놓은 집합,개발자가 필요할 때 도구들을 호출하는 형태로 사용 <br/>
+      프레임워크: sw의 보완을 위해 상호협력하는 클래스,인터페이스의 집합<br/>
+      차이점:둘의 차이점에는 *제어흐름에 대해 큰 차이가 있다. <br/>
+      *제어흐름:(영어: control flow 또는 flow of control)은 프로그램에서 실행되는 각 구문, 명령어나 함수가 호출되는 순서를 의미한다.<br/>
+      한편 제어흐름(制御흐름)을 알고리즘에 따른 명령문을 처리할 때 관련 장치들이 연속적으로 작동되는 과정으로 정의해본다면 제어문은 주어진 조건의 결괏값에 따라서 프로그램의 수행 순서를 제어하거나 문장들의 수행 횟수를 조정하는 문장을 가리킨다.
+      프레임워크가 흐름을 스스로 제어하고 개발자가 코드를 입력하는 형태라면, 라이브러리는 개발자가 흐름을 통제하며 필요한 라이브러리를 가져오는 형태로 볼 수있다.<br/>
+      예)프레임 워크:Spring,Django.../라이브러리:jQuery,GUI...<br/>
+      *어떤 사람은 자동차에 비유하여 설명했다. 라이브러리는 자동차의 바퀴,헤드라이트,에어백이고,프레임워크는 자동차 프레임 자체라고 설명한다.<br/>
+      *React는 프레임워크가 아니라 라이브러리라고 한다. 다른 프레임워크들이 기본으로 가진것을 react는 다른 라이브러리의 호출없이 사용할 수 없는 기능이 많아 라이브러리로 분류된다고한다,.<br/>
+    </p>
   </head>
   <body></body>
 </html>
