--- a/todayILearndeEtc.html
+++ b/todayILearndeEtc.html
@@ -7,10 +7,10 @@
    
   </head>
   <body>
-    <title>수영의 TIL Etc</title>
+    <h1>수영의 TIL Etc</h1>
     
     
-     <h1>라이브러리와 프레임워크</h1>
+     <h2>라이브러리와 프레임워크</h2>
     <hr/>
     <p>
       라이브러리: 개발자가 필요한 도구들을 모아놓은 집합,개발자가 필요할 때 도구들을 호출하는 형태로 사용 <br/>
