--- a/todayILearndeEtc.html
+++ b/todayILearndeEtc.html
@@ -23,5 +23,62 @@
       *어떤 사람은 자동차에 비유하여 설명했다. 라이브러리는 자동차의 바퀴,헤드라이트,에어백이고,프레임워크는 자동차 프레임 자체라고 설명한다.<br/>
       *React는 프레임워크가 아니라 라이브러리라고 한다. 다른 프레임워크들이 기본으로 가진것을 react는 다른 라이브러리의 호출없이 사용할 수 없는 기능이 많아 라이브러리로 분류된다고한다,.<br/>
     </p>
+    <hr/>
+    <h2>Java 기초 복습</h2>
+    <p>
+      
+    println(문자,숫자,변수);<br/>
+
+int,long+L,short,byte 크기는 long,int,short,byte순<br/>
+
+형변환(type casting) : long l = 30L; int i = (int)30L; //반대 경우는 자동 형변환(int->long)<br/>
+ 
+double.float+f<br/>
+
+boolean true.false<br/>
+
+char c = '';<br/>
+
+string str = "";
+<br/>
+Math class
+Math.max(10,30) 최대값
+abs 절대값 ...
+<br/>
+Integer.parseInt("");
+String.valueOf(0);
+<br/>
+Random random = new Random();
+int rand = random.nextInt(0,4);
+<br/>
+Scanner sc = new Scanner(Systm.in);
+<br/>
+if,else,else if
+? 삼항연산자
+<br/>
+배열
+int[] score;
+int[] score = new int[5];
+.length 배열길이
+ <br/>
+List
+<br/>
+ArrayList<Integer> arrList = new ArrayList<>();//정수형 arrayList 선언
+<br/>
+arrList.add(0,10); //list에 index 0 에 정수 10 추가
+<br/>
+arrList.size()//arrlist 크기
+<br/>
+arrList.get(0)//Index 0 의 값
+<br/>
+"..." 0보다 큰 n번을 배열 형태로 불러옴 <br/>
+ public static int add(int...nubers){
+	int sum = 0;
+	for(int i=0;i<numbers.length;i++){
+		sum += i;
+	}<br/>
+	return sum;
+}//add();에서 파라미터 갯수를 원하는 만큼 쓸 수 있다.<br/>
+    </p>
   </body>
 </html>
