--- a/todayILearndeEtc.html
+++ b/todayILearndeEtc.html
@@ -72,6 +72,7 @@ arrList.size()//arrlist 크기
 arrList.get(0)//Index 0 의 값
 <br/>
 "..." 0보다 큰 n번을 배열 형태로 불러옴 <br/>
+	    
  public static int add(int...nubers){
 	int sum = 0;
 	for(int i=0;i<numbers.length;i++){
@@ -79,6 +80,30 @@ arrList.get(0)//Index 0 의 값
 	}<br/>
 	return sum;
 }//add();에서 파라미터 갯수를 원하는 만큼 쓸 수 있다.<br/>
+	    
+	    Public class Main{<br/>
+	Public static void main(String[] args){<br/>
+		….<br/>
+	Person person = new Person();<br/>
+	Person person2 = 
+	new Person(“John”,20);
+	}<br/>
+}<br/>
+class Person{<br/>
+	public String name;<br/>
+	private int age;//접근자 제한
+<br/>
+	person(){//기본 생성자
+<br/>
+	}<br/>
+	person(String name,int age){<br/>
+		this.name = name; //받은 값과 이름이 값은 변수의 구분<br/>
+		this.age=age;<br/>
+	}<br/>
+} <br/>
+class Student extends Person{<br/>
+//Person class 상속<br/>
+}
     </p>
   </body>
 </html>
