--- a/todayILearnedReact.html
+++ b/todayILearnedReact.html
@@ -346,6 +346,7 @@ useMotionValue: 움직인 이동 값을 알 수 있다. 하지만 react의 state
 	 <h4>*슬라이드를 만들면 빠르게 이동하면 마지막 부분과 첫부분으로 돌아갈때 버벅이는 현상이 생긴다</h4>
 	 	<AnimatePresence onExitComplete={}> //AnimatePresence에 있는 prop인 onExitComplete를 이용하면 해결 할 수 있다.<br/>
 		 작동이 끝났는지 확인하는 boolean값을 갖는 state를 만들고, boolean값을 바꾸는 toggle함수를 만들어  onExitComplete에 넣으면 해결할 수 있다.<br/>
+			*페이지 로드시에 슬라이드가 작동하는 것은 AnimatePresence에 initial={false} prop의 값을 false로 입력하면 된다
 	 </p>
 	 <hr/>
 	 <h1>CoinTracker</h1>
